kubernetes/overlays/k3s/homelab/litmus-chaos/litmus-chaos/ingress.yaml
# Copyright (C) 2021 Nicolas Lamirault <nicolas.lamirault@gmail.com>
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/upstream-vhost: $service_name.$namespace.svc.cluster.local:8084
    nginx.ingress.kubernetes.io/configuration-snippet: |
      proxy_set_header Origin "";
      proxy_hide_header l5d-remote-ip;
      proxy_hide_header l5d-server-id;
  labels:
    # renovate: registryUrl=https://litmuschaos.github.io/litmus-helm/
    helm.sh/chart: litmus-2-0-0-beta-2.0.22-Beta8
    app.kubernetes.io/name: litmus-2-0-0-beta
    app.kubernetes.io/version: 2.0.22-Beta8
    app.kubernetes.io/component: litmus-2-0-0-beta-frontend
    app.kubernetes.io/instance: litmus
    app.kubernetes.io/part-of: litmus-2-0-0-beta
    app.kubernetes.io/managed-by: Helm
    portefaix.xyz/version: v0.22.0
  name: litmus-external
  namespace: chaos-mesh
spec:
  rules:
  - host: litmus-chaos.homelab.portefaix.xyz
    http:
      paths:
      - path: /(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: litmusportal-frontend-service
            port:
              number: 9091
      - path: /backend/(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: litmusportal-server-service
            port:
              number: 9002
